--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hi! Welcome to my first website...</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Walla Walla, WA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Photography and traveling</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Racecar Driver</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>New York</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Changing my career path</p>
     </section>
 
     <footer id="footer">
